kubernates/node-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  labels:
    app: node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - env:
            - name: MONGO_URI
              valueFomr:
                secretKeyRef:
                  key: mongo
                  name: fullnode
          image: salimondev/node
          imagePullPolicy: Always
          name: node
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              ephemeral-storage: 100M
              memory: 100M
            requests:
              cpu: 100m
              ephemeral-storage: 100M
              memory: 100M
      imagePullSecrets:
        - name: regcred
