kubernates/node-service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  selector:
    app: node
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
