kubernates/node-route.yml
apiVersion: v1
kind: Route
metadata:
  name: node-route
spec:
  host: api.salimon.ir
  to:
    kind: Service
    name: node-service
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  port:
    targetPort: 80
